--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ asyncmy==0.2.9
 billiard==4.2.0
 celery==5.3.6
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+cryptography==42.0.5
 exceptiongroup==1.2.0
 fastapi==0.110.0
 h11==0.14.0
@@ -20,6 +22,7 @@ idna==3.6
 iso8601==1.1.0
 kombu==5.3.5
 prompt-toolkit==3.0.43
+pycparser==2.21
 pydantic==2.6.4
 pydantic_core==2.16.3
 pypika-tortoise==0.1.6
