--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     container_name: backend
     build: .
 
-    command: bash -c "chmod +x wait-for-it.sh && ./wait-for-it.sh db:3306 --timeout=30 --strict -- python3 db_init.py && python3 main.py"
-#    command: bash -c "python3 main.py"
+#    command: bash -c "chmod +x wait-for-it.sh && ./wait-for-it.sh db:3306 --timeout=30 --strict -- python3 db_init.py && python3 main.py"
+    command: bash -c "python3 main.py"
     # command: bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     volumes:
       - .:/app
