--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
+aiosqlite==0.17.0
 amqp==5.2.0
 annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
 asyncmy==0.2.9
+attrs==23.2.0
 billiard==4.2.0
 certifi==2024.2.2
 cffi==1.16.0
@@ -15,10 +19,12 @@ colorama==0.4.6
 cryptography==42.0.5
 exceptiongroup==1.2.0
 fastapi==0.110.0
+frozenlist==1.4.1
 h11==0.14.0
 idna==3.6
 iso8601==1.1.0
 kombu==5.3.5
+multidict==6.0.5
 prompt-toolkit==3.0.43
 pycparser==2.21
 pydantic==2.6.4
@@ -36,4 +42,4 @@ urllib3==2.2.1
 uvicorn==0.29.0
 vine==5.1.0
 wcwidth==0.2.13
-
+yarl==1.9.4
