--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,6 @@
 version: '3.8'
 
 services:
-  redis:
-    container_name: redis
-    image: redis:6.2-alpine
-
   db:
     image: mysql:8.0
     restart: always
@@ -18,9 +14,9 @@ services:
   backend:
     container_name: backend
     build: .
-
-    command: bash -c "chmod +x wait-for-it.sh && ./wait-for-it.sh db:3306 --timeout=30 --strict -- python3 db_init.py && python3 main.py"
-#    command: bash -c "python3 main.py"
+    restart: always
+#    command: bash -c "chmod +x wait-for-it.sh && ./wait-for-it.sh db:3306 --timeout=30 --strict -- python3 db_init.py && python3 main.py"
+    command: bash -c "python3 main.py"
     # command: bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     volumes:
       - .:/app
@@ -28,19 +24,8 @@ services:
       - "8000:8000"
     depends_on:
       - db
-      - redis
 
-  
-  celery:
-    container_name: celery
-    build: .
-    command: bash -c "celery -A my_celery worker -l INFO"
-    volumes:
-      - .:/app
-    depends_on:
-      - db
-      - redis
-      - backend
+
 
 
   
