--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ DBPASSWORD=maluyao123
 BOOKER_SIZE=4
 BOOKER1_ID=0
 BOOKER2_ID=1
-DB_HOST=127.0.0.1
+BOOKER3_ID=2
+BOOKER4_ID=3
+DB_HOST=8.130.141.190
