添加明日抢座功能

--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
 DBPASSWORD=maluyao123
-BOOKER_SIZE=4
-BOOKER1_ID=0
-BOOKER2_ID=1
-BOOKER3_ID=2
-BOOKER4_ID=3
+BOOKER_SIZE=2
+BOOKER_ID=0
 DB_HOST=8.130.141.190
