--- a/docker-compose.morning.yml
+++ b/docker-compose.morning.yml
@@ -5,7 +5,7 @@ services:
     container_name: morning
     build: .
     restart: always
-    command: bash -c "python3 -u morning_main.py"
+    command: bash -c "python3 -u morning_main.py ${DB_HOST}"
     volumes:
       - .:/app
 
