--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -15,7 +15,7 @@ services:
     container_name: backend
     build: .
     restart: always
-    command: bash -c "python3 main.py"
+    command: bash -c "python3 -u main.py"
     volumes:
       - .:/app
     ports:
