--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -15,9 +15,7 @@ services:
     container_name: backend
     build: .
     restart: always
-#    command: bash -c "chmod +x wait-for-it.sh && ./wait-for-it.sh db:3306 --timeout=30 --strict -- python3 db_init.py && python3 main.py"
-    command: bash -c "python3 main.py"
-    # command: bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+    command: bash -c "python3 -u main.py"
     volumes:
       - .:/app
     ports:
@@ -25,6 +23,7 @@ services:
     depends_on:
       - db
 
+    
 
 
 
