--- a/docker-compose.booker.yml
+++ b/docker-compose.booker.yml
@@ -17,3 +17,11 @@ services:
     volumes:
       - .:/app
   
+  cancel:
+    container_name: cancel
+    build: .
+    restart: always
+    command: bash -c "python3 -u setup.py cancel --host ${DB_HOST}"
+    volumes:
+      - .:/app
+  
