--- a/docker-compose.booker.yml
+++ b/docker-compose.booker.yml
@@ -5,23 +5,9 @@ services:
     container_name: booker
     build: .
     restart: always
-    command: bash -c "python3 -u setup.py booker --host ${DB_HOST} --worker_size ${WORKER_SIZE} --worker_id ${WORKER_ID}"
+    command: bash -c "python3 -u setup.py booker --host ${DB_HOST}"
     volumes:
       - .:/app
 
-  pool:
-    container_name: pool
-    build: .
-    restart: always
-    command: bash -c "python3 -u setup.py pool --host ${DB_HOST}"
-    volumes:
-      - .:/app
-  
-  cancel:
-    container_name: cancel
-    build: .
-    restart: always
-    command: bash -c "python3 -u setup.py cancel --host ${DB_HOST}"
-    volumes:
-      - .:/app
+
   
