--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-ddddocr==1.4.11
-uvloop==0.19.0
 aiohttp==3.9.3
 aiosignal==1.3.1
 aiosqlite==0.17.0
@@ -18,30 +16,45 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+coloredlogs==15.0.1
 cryptography==42.0.5
 exceptiongroup==1.2.0
 fastapi==0.110.0
+flatbuffers==24.3.25
 frozenlist==1.4.1
 h11==0.14.0
+humanfriendly==10.0
 idna==3.6
 iso8601==1.1.0
 kombu==5.3.5
+mpmath==1.3.0
 multidict==6.0.5
+numpy==1.26.4
+onnxruntime==1.17.3
+opencv-python-headless==4.9.0.80
+packaging==24.0
+pillow==10.3.0
 prompt-toolkit==3.0.43
+protobuf==5.26.1
 pycparser==2.21
 pydantic==2.6.4
 pydantic_core==2.16.3
+PyMySQL==1.1.1
 pypika-tortoise==0.1.6
 python-dateutil==2.9.0.post0
 pytz==2024.1
+requests==2.32.3
 six==1.16.0
 sniffio==1.3.1
 starlette==0.36.3
+sympy==1.12
 tortoise-orm==0.20.0
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 uvicorn==0.29.0
+uvloop==0.19.0
 vine==5.1.0
 wcwidth==0.2.13
+websocket-client==1.8.0
 yarl==1.9.4
