--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,46 @@
-ddddocr==1.4.11
-uvloop==0.19.0
-aiohttp==3.9.3
+aiohttp==3.9.5
+aiomysql==0.2.0
 aiosignal==1.3.1
 aiosqlite==0.17.0
-amqp==5.2.0
-annotated-types==0.6.0
-anyio==4.3.0
+annotated-types==0.7.0
+anyio==4.4.0
 async-timeout==4.0.3
 asyncmy==0.2.9
 attrs==23.2.0
-billiard==4.2.0
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
 click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-cryptography==42.0.5
-exceptiongroup==1.2.0
+coloredlogs==15.0.1
+ddddocr==1.5.5
+exceptiongroup==1.2.1
 fastapi==0.110.0
+flatbuffers==24.3.25
 frozenlist==1.4.1
 h11==0.14.0
-idna==3.6
+httptools==0.6.1
+humanfriendly==10.0
+idna==3.7
 iso8601==1.1.0
-kombu==5.3.5
+mpmath==1.3.0
 multidict==6.0.5
-prompt-toolkit==3.0.43
-pycparser==2.21
-pydantic==2.6.4
-pydantic_core==2.16.3
+numpy==1.26.0
+onnxruntime==1.18.0
+opencv-python-headless==4.10.0.84
+packaging==24.1
+pillow==10.3.0
+protobuf==5.27.1
+pydantic==2.7.4
+pydantic_core==2.18.4
+PyMySQL==1.1.1
 pypika-tortoise==0.1.6
-python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
-six==1.16.0
+PyYAML==6.0.1
 sniffio==1.3.1
 starlette==0.36.3
-tortoise-orm==0.20.0
-typing_extensions==4.10.0
-tzdata==2024.1
-urllib3==2.2.1
-uvicorn==0.29.0
-vine==5.1.0
-wcwidth==0.2.13
+sympy==1.12.1
+tortoise-orm==0.21.3
+typing_extensions==4.12.2
+uvicorn==0.30.1
+uvloop==0.19.0
+watchfiles==0.22.0
+websockets==12.0
 yarl==1.9.4
