--- a/docker-compose.booker.yml
+++ b/docker-compose.booker.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  booker:
-    container_name: booker
+  eve:
+    container_name: eve
     build: .
     restart: always
-    command: bash -c "python3 -u setup.py booker --host ${DB_HOST} --worker_size ${WORKER_SIZE} --worker_id ${WORKER_ID}"
+    command: bash -c "python3 -u setup.py eve --host ${DB_HOST} --worker_size ${WORKER_SIZE} --worker_id ${WORKER_ID}"
     volumes:
       - .:/app
 
